@@ -28,6 +28,9 @@ import cascading.operation.OperationException;
  */
 public class Tuples
   {
+  /** A constant empty Tuple instance. Immutability is not currently enforced. Use with caution. */
+  public static final Tuple NULL = new Tuple();
+
   /**
    * Method asArray convert the given {@link Tuple} instance into an Object[]. The given Class[] array
    * denotes the types each tuple element value should be coerced into.
